# py-suricataparser

./: .gitignore  .travis.yml  LICENSE  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: tests.yml
suricataparser/: __init__.py  exceptions.py  parse.py  rule.py
tests/: test_parse.py  test_rule.py
